in mysql image expose empty root pwd env var

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -7,6 +7,9 @@ RUN apt-get update && \
 ARG SEED_DATA_URL="https://wikimedia.github.io/pixel-seed-data/database_2025-02-12_16-49-46-0600(CST).tar.gz"
 ENV SEED_DATA_URL=${SEED_DATA_URL}
 
+ARG MARIADB_ALLOW_EMPTY_ROOT_PASSWORD="yes"
+ENV MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=${MARIADB_ALLOW_EMPTY_ROOT_PASSWORD}
+
 RUN rm -rf /var/lib/mysql && \
     mkdir -p /var/lib/mysql && \
     wget -O - "$SEED_DATA_URL" | \
