--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get update && \
 ARG MARIADB_ALLOW_EMPTY_ROOT_PASSWORD="yes"
 ENV MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=${MARIADB_ALLOW_EMPTY_ROOT_PASSWORD}
 
+COPY mysql/90-ignore-hidden-dirs.cnf /etc/mysql/mariadb.conf.d/
+
 RUN rm -rf /var/lib/mysql && \
     mkdir -p /var/lib/mysql && \
     chown -R mysql:mysql /var/lib/mysql
