--- a/lint/Dockerfile
+++ b/lint/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:25-alpine3.21
 
-RUN apk --no-cache add file \
+RUN apk --no-cache add file git \
     && wget -O /usr/local/bin/shfmt https://github.com/mvdan/sh/releases/download/v3.12.0/shfmt_v3.12.0_linux_amd64 \
     && chmod +x /usr/local/bin/shfmt \
     && npm install -g --omit=dev eslint@^9.39.1 @stylistic/eslint-plugin@^5.5.0 eslint-plugin-vue@^10.5.1 vue-eslint-parser@^10.2.0 \
