add explicit codex build script

--- a/codex/Dockerfile
+++ b/codex/Dockerfile
@@ -2,13 +2,16 @@ FROM node:23-alpine3.21
 
 WORKDIR /app
 
-RUN apk add --no-cache git curl && \
-    git clone https://gerrit.wikimedia.org/r/design/codex && \
-    cd codex && \
-    npm ci && \
-    npm run build -w @wikimedia/codex-icons && \
-    npm run build -w @wikimedia/codex-design-tokens && \
-    CODEX_DOC_ROOT=/w/codex/packages/codex/dist npm run build -w @wikimedia/codex
+# Copy the build script and make it executable
+COPY codex/build.sh /usr/local/bin/build-codex
+RUN chmod +x /usr/local/bin/build-codex
+
+RUN apk add --no-cache git && \
+    git clone --depth 1 https://gerrit.wikimedia.org/r/design/codex && \
+    # Run the baked-in script for the initial build
+    build-codex && \
+    npm cache clean --force && \
+    rm -rf /root/.npm /tmp/*
 
 WORKDIR /app/codex
 
