add ansi2html image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,3 +62,9 @@ services:
       context: .
       dockerfile: tofu/Dockerfile
     image: ${REGISTRY:-}tofu:latest
+
+  ansi2html:
+    build:
+      context: .
+      dockerfile: ansi2html/Dockerfile
+    image: ${REGISTRY:-}ansi2html:latest
